# WindowManager

./: .flake8  .gitignore  .pylintrc  README.md  TestApp.spec  WinHide.spec  build.bat  build.py  build_release.bat  config.json  cursor代码优化总结.md  mypy.ini  nuitka_build_args.txt  nuitka_build_args_release.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_spec.py  setup.py  test_run.py  windowmanager.spec  windowmanager_console.spec  windowmanager_noconsole.spec
docs/: BUILD_GUIDE.md  BUILD_RESULT.md  CODE_CLEANUP_REPORT.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_REPORT.md  FINAL_CODE_REVIEW.md  PROJECT_Planning.md  README.md  REDUNDANT_FILES.md  Rules by User(never delete).md  SETUP_SUMMARY.md  Windows窗口机制.md  优化方案.md  窗口管理流程文档.md  窗口管理流程设定by user.md  重构方案设计.md
src/: __init__.py  app.py  cache_manager.py  config.py  config_handler.py  config_manager.py  constants.py  core.py  deps.py  hotkey_manager.py  hotkey_recorder.py  hotkey_recorder_core.py  log_utils.py  main_window_ops.py  manager.py  process_detector.py  theme.py  time_sync.py  ui.py  ui_about.py  ui_log.py  ui_main.py  ui_settings.py  ui_time_sync.py  ui_whitelist.py  utils.py  window_base.py  window_classifier.py  window_keywords.py  window_manager_ui.py  window_models.py  window_operations.py  window_switch.py  window_table.py  window_thread.py
src/widgets/: __init__.py  hotkey_settings.py  time_settings.py  whitelist_settings.py
tests/: conftest.py  run_tests.py  test_app.py  test_before_hide.py  test_cache_manager.py  test_config.py  test_constants.py  test_deps.py  test_explorer_windows.py  test_hide_show.py  test_hwnd_unified.py  test_imports.py  test_integration.py  test_log_utils.py  test_process_detector.py  test_show_window.py  test_theme.py  test_ui_components.py  test_utils.py  test_window_base.py  test_window_models.py  test_window_operations.py  test_window_state.py  test_window_switch.py
tools/: _diag_book.py  _diag_owner.py  _find_book.py  enum_windows.py  show_window.py
